/*
 * Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 * SPDX-License-Identifier: MIT-0
 */
 
/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.3/userguide/building_java_projects.html
 */

plugins {
    id 'java-library'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // This dependency is used by the application.

    // AWS SDK v2
    implementation platform('software.amazon.awssdk:bom:2.18.28')
    implementation 'software.amazon.awssdk:lambda'
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:sqs'
    implementation 'software.amazon.awssdk:eventbridge'
    implementation 'software.amazon.awssdk:acmpca'
    implementation 'software.amazon.awssdk:auth'

    // Lambda SDK
    implementation 'com.amazonaws:aws-lambda-java-core:1.2.2' // https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-core
    implementation 'com.amazonaws:aws-lambda-java-events:3.11.0' // https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-events

    // Others
    implementation 'com.google.code.gson:gson:2.10'
    implementation 'com.google.guava:guava:33.3.0-jre'
    implementation 'org.bouncycastle:bcprov-jdk15on:[1.70,)'
    implementation 'org.bouncycastle:bcmail-jdk15on:[1.70,)'
    implementation 'org.apache.logging.log4j:log4j-api:[2.19.0,2.23)'
    implementation 'org.apache.logging.log4j:log4j-core:[2.19.0,2.23)'
    implementation 'org.apache.logging.log4j:log4j-slf4j18-impl:[2.18.0,2.23)'

    implementation 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    // Use JUnit Jupiter for testing.
    testImplementation 'org.apache.logging.log4j:log4j-api:[2.19.0,2.23)'
    testImplementation 'org.apache.logging.log4j:log4j-core:[2.19.0,2.23)'
    testImplementation 'org.apache.logging.log4j:log4j-slf4j18-impl:[2.18.0,2.23)'
    testImplementation 'org.junit.jupiter:junit-jupiter:[5.9.1,)'
    testImplementation 'org.mockito:mockito-core:4.9.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.9.0'
    testImplementation 'org.mockito:mockito-all:1.10.19'

    testImplementation 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:[5.11.0,)'
}

tasks.register("buildZip", Zip) {
    from compileJava
    from processResources
    into('lib') {
        from configurations.runtimeClasspath
    }
}

java {
    // Define the main class for the application.
    //mainClass = 'com.sample.Handler'
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

// test {
//     jvmArgs '--illegal-access=permit'
// }

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

build.dependsOn buildZip